Stop using CDN in preview.
This means changes are reflected immediately in the demo site.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Preconception Medical Assessment Demo</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/DelfinaCare/preconception-medical-assessment@latest/questionnaire.min.css"
+    <link rel="stylesheet" href="./questionnaire.css"
     />
   </head>
   <body
@@ -43,6 +41,6 @@
 &lt;script src="https://cdn.jsdelivr.net/gh/DelfinaCare/preconception-medical-assessment@latest/questionnaire.min.js">&lt;/script></pre
       >
     </div>
-    <script src="https://cdn.jsdelivr.net/gh/DelfinaCare/preconception-medical-assessment@latest/questionnaire.min.js"></script>
+    <script src="./questionnaire.js"></script>
   </body>
 </html>
