Make changes as requested by OSG.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 &lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/DelfinaCare/preconception-medical-assessment@latest/questionnaire.min.css">
 &lt;script src="https://cdn.jsdelivr.net/gh/DelfinaCare/preconception-medical-assessment@latest/questionnaire.min.js">&lt;/script></pre
       >
+      <p>This quiz does not record any responses by itself. If the site you host on also do not have any tracking analytics in place, you can communicate this to your users.</p>
     </div>
     <script src="./questionnaire.js"></script>
   </body>
