Add iframe instructions.

--- a/index.html
+++ b/index.html
@@ -33,13 +33,22 @@
           overflow-x: auto;
         "
       >
-&lt;!-- Add this where you want the questionnaire to appear -->
-&lt;div id="preconception-medical-assessment">&lt;/div>
+&lt;!-- Add this where you want the questionnaire to appear --&gt;
+&lt;div id="preconception-medical-assessment">&lt;/div&gt;
 
-&lt;!-- Add these to your head or before closing body tag -->
-&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/DelfinaCare/preconception-medical-assessment@latest/questionnaire.min.css">
-&lt;script src="https://cdn.jsdelivr.net/gh/DelfinaCare/preconception-medical-assessment@latest/questionnaire.min.js">&lt;/script></pre
-      >
+&lt;!-- Add these to your head or before closing body tag --&gt;
+&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/DelfinaCare/preconception-medical-assessment@latest/questionnaire.min.css"&gt;
+&lt;script src="https://cdn.jsdelivr.net/gh/DelfinaCare/preconception-medical-assessment@latest/questionnaire.min.js">&lt;/script&gt;</pre>
+      <p>Alternatively, if you can embed using an iframe with the following code. You may have to modify the width and height attributes.</p>
+      <pre
+        style="
+          background: #f5f5f5;
+          padding: 15px;
+          border-radius: 4px;
+          overflow-x: auto;
+        "
+      >&lt;iframe src="https://cdn.jsdelivr.net/gh/DelfinaCare/preconception-medical-assessment@latest/embed.html"&gt;&lt;/iframe&gt;</pre>
+      <h3>Data Privacy</h3>
       <p>This quiz does not record any responses by itself. If the site you host on also do not have any tracking analytics in place, you can communicate this to your users.</p>
     </div>
     <script src="./questionnaire.js"></script>
