Update embed instructions.
Describe how to set the parent element size too.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           border-radius: 4px;
           overflow-x: auto;
         "
-      >&lt;iframe src="https://cdn.jsdelivr.net/gh/DelfinaCare/preconception-medical-assessment@latest/embed.html"&gt;&lt;/iframe&gt;</pre>
+      >&lt;iframe src="https://delfinacare.github.io/preconception-medical-assessment/embed.html"&gt;&lt;/iframe&gt;</pre>
       <h3>Data Privacy</h3>
       <p>This quiz does not record any responses by itself. If the site you host on also do not have any tracking analytics in place, you can communicate this to your users.</p>
     </div>
