--- a/embed_test.html
+++ b/embed_test.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <!-- For height="100%" to work for the iframe, the parent has to be sized. -->
-    <div style="width: 100%; height: 100vh;">
-        <iframe src="./embed.html" frameborder="0" width="100%" height="100%"></iframe>
+    <div style="width: 100vw; height: 100vh;">
+        <iframe src="./embed.html" style="border: none;" width="100%" height="100%"></iframe>
     </div>
   </body>
 </html>
