--- a/index.html
+++ b/index.html
@@ -39,15 +39,7 @@
 &lt;!-- Add these to your head or before closing body tag --&gt;
 &lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/DelfinaCare/preconception-medical-assessment@latest/questionnaire.min.css"&gt;
 &lt;script src="https://cdn.jsdelivr.net/gh/DelfinaCare/preconception-medical-assessment@latest/questionnaire.min.js">&lt;/script&gt;</pre>
-      <p>Alternatively, if you can embed using an iframe with the following code. You may have to modify the width and height attributes.</p>
-      <pre
-        style="
-          background: #f5f5f5;
-          padding: 15px;
-          border-radius: 4px;
-          overflow-x: auto;
-        "
-      >&lt;iframe src="https://delfinacare.github.io/preconception-medical-assessment/embed.html"&gt;&lt;/iframe&gt;</pre>
+      <p>Alternatively, if you can embed using an iframe if injecting JavaScript is not possible. For more details on how to do this, please see the <a href="https://github.com/DelfinaCare/gaia">README</a>.</p>
       <h3>Data Privacy</h3>
       <p>This quiz does not record any responses by itself. If the site you host on also do not have any tracking analytics in place, you can communicate this to your users.</p>
     </div>
